# codrevex

./: .gitignore  README.md  main.py  pyproject.toml
.serena/: project.yml
.serena/memories/: code_structure.md  post_task_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
src/code_reviewer/: __init__.py  ast_analyzer.py  cli.py  code_reviewer.py  config.py  git_analyzer.py  test_generator.py
src/code_reviewer/prompts/: __init__.py  review_harsh.txt  review_normal.txt  review_strict.txt  test_generation.txt
